# wlr-idle-proxy

./: README.md  main.c  meson.build  shell.nix
protocol/: meson.build
